[package]
name = "bakaserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
protobuf = "3.1.0"
futures = "0"
tokio = { version = "1", features = ["full"] }
bakalib = { version = "0.1.0", path = "../bakalib" }
bakaproto = { version = "0.1.0", path = "../bakaproto" }
